--- a/index.html
+++ b/index.html
@@ -28,13 +28,28 @@
   .list{display:flex;flex-direction:column;gap:6px}
   .person{background:rgba(255,255,255,0.02);padding:6px;border-radius:6px;display:flex;align-items:center;gap:8px;justify-content:space-between}
   .avatar{width:28px;height:28px;border-radius:999px;background:#1f2937;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:700}
-  .btn{margin-top:8px;border:none;padding:8px 10px;border-radius:8px;background:var(--accent);color:white;cursor:pointer;width:100%}
+  .btn{margin-top:8px;border:none;padding:8px 10px;border-radius:8px;background:var(--accent);color:white;cursor:pointer;width:100%;transition:opacity 0.3s ease}
   .btn[disabled]{opacity:.45;cursor:not-allowed;background:rgba(107,70,193,0.45)}
   .delete-btn{color:var(--danger);cursor:pointer;font-weight:bold;margin-left:8px}
   footer{margin-top:14px;color:var(--muted);font-size:13px}
   .admin-panel{display:flex;gap:8px;align-items:center}
   .small{font-size:13px;color:var(--muted)}
   #statusBanner{padding:10px;text-align:center;border-radius:8px;margin-bottom:10px;font-weight:600}
+  [title]{position:relative}
+  [title]:hover::after{
+    content:attr(title);
+    position:absolute;
+    bottom:120%;
+    left:50%;
+    transform:translateX(-50%);
+    background:#111;
+    color:#fff;
+    font-size:12px;
+    padding:4px 8px;
+    border-radius:4px;
+    white-space:nowrap;
+    opacity:0.9;
+  }
   @media(max-width:1100px){ .board{grid-template-columns:repeat(3, 1fr)} }
   @media(max-width:720px){ .board{grid-template-columns:repeat(1, 1fr)} header{flex-direction:column;align-items:flex-start} }
 </style>
@@ -59,7 +74,7 @@
 <div class="board-wrap"><div id="board" class="board"></div></div>
 <footer>Ghi chú: Bấm "Đăng ký" → nhập tên. Bấm ❌ để xóa tên của chính bạn. Hệ thống cập nhật realtime.</footer>
 
-<!-- Firebase SDKs đặt TRƯỚC code chính -->
+<!-- Firebase SDKs -->
 <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-database-compat.js"></script>
 
@@ -238,11 +253,14 @@
     if (day === 5 && (hour > 19 || (hour === 19 && minute >= 50))) isOpen = true;
     if (day === 6 && (hour < 21 || (hour === 21 && minute === 0))) isOpen = true;
 
-    // Ẩn/hiện nút đăng ký
     const buttons = document.querySelectorAll(".btn");
     buttons.forEach(btn => {
       if (["adminBtn", "resetBtn", "logoutBtn"].includes(btn.id)) return;
-      btn.style.display = isOpen ? "block" : "none";
+      btn.disabled = !isOpen;
+      btn.style.opacity = isOpen ? "1" : "0.4";
+      btn.style.cursor = isOpen ? "pointer" : "not-allowed";
+      btn.title = isOpen ? "" : "Ngoài giờ đăng ký";
+      btn.textContent = isOpen ? btn.textContent.replace("🔒 ", "") : "🔒 Ngoài giờ đăng ký";
     });
 
     if (isOpen) {
