--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
   function onRegister(shiftId) {
     if (!isRegistrationOpen()) {
-      alert("🔒 Ngoài giờ đăng ký (chỉ mở 19:50 Thứ 6 → 21:00 Thứ 7)");
+      alert("🔒 Ngoài giờ đăng ký (chỉ mở vào 19:50 Thứ 6 → 21:00 Thứ 7)");
       return;
     }
     let name = localStorage.getItem('myName');
@@ -329,3 +329,4 @@
 </script>
 </body>
 </html>
+
